# twini-golf

./: CMakeLists.txt  build.bat
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: init.cpp  init.h  load_assets.cpp  load_assets.h  loader.cpp  loader.h  main.cpp  renderer.cpp  renderer.h  types.h
